linkerd-egress/k8s/face2.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: face2
  namespace: faces
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: http
  selector:
    service: face2
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: face2
  namespace: faces
spec:
  replicas: 1
  selector:
    matchLabels:
      service: face2
  template:
    metadata:
      labels:
        service: face2
    spec:
      containers:
      - env:
        - name: FACES_SERVICE
          value: face
        - name: USER_HEADER_NAME
          value: X-Faces-User
        - name: ERROR_FRACTION
          value: "0"
        - name: SMILEY_SERVICE
          value: smiley3
        - name: COLOR_SERVICE
          value: color3
        image: ghcr.io/buoyantio/faces-workload:2.0.0-rc.1
        imagePullPolicy: IfNotPresent
        name: face2
        ports:
        - containerPort: 8000
          name: http
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 128Mi
          requests:
            cpu: 300m
            memory: 64Mi
      restartPolicy: Always
