linkerd-egress/k8s/allow-center-egress-controller.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: allow-smiley-center
  namespace: faces
spec:
  hostnames:
    - smiley
  parentRefs:
    - kind: EgressNetwork
      group: policy.linkerd.io
      name: all-egress
      namespace: linkerd-egress
      port: 80
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /center
      backendRefs:
        - name: egress-svc
          namespace: envoy-gateway-system
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: allow-color-center
  namespace: faces
spec:
  parentRefs:
    - kind: EgressNetwork
      group: policy.linkerd.io
      name: all-egress
      namespace: linkerd-egress
      port: 8000
  rules:
    - matches:
        - method:
            service: ColorService
            method: Center
      backendRefs:
        - name: egress-svc
          namespace: envoy-gateway-system
          port: 80
