linkerd-egress/k8s/allow-edge.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: allow-smiley
  namespace: faces
spec:
  hostnames:
    - smiley
  parentRefs:
    - kind: EgressNetwork
      group: policy.linkerd.io
      name: all-egress
      namespace: linkerd-egress
      port: 80
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /edge
---
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: allow-color
  namespace: faces
spec:
  parentRefs:
    - kind: EgressNetwork
      group: policy.linkerd.io
      name: all-egress
      namespace: linkerd-egress
      port: 8000
  rules:
    - matches:
        - method:
            service: ColorService
            method: Edge
