linkerd-egress/k8s/allow-smiley-all.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: allow-smiley
  namespace: faces
spec:
  hostnames:
    - smiley
  parentRefs:
    - kind: EgressNetwork
      group: policy.linkerd.io
      name: all-egress
      namespace: linkerd-egress
      port: 80
