linkerd-egress/k8s/face2-direct.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: face2-direct
  namespace: faces
spec:
  parentRefs:
    - kind: Service
      group: ""
      name: face
      port: 80
  rules:
    - backendRefs:
        - name: face2
          port: 80
